[package]
name = "fyaml-sys"
version = "0.1.1-alpha.2+fy1.0.0-alpha7"
authors = ["Valentin Lab <valentin.lab@kalysto.org>", "David Tolnay <dtolnay@gmail.com>"]
categories = ["api-bindings", "encoding", "parser-implementations"]
description = "Rust FFI bindings for libfyaml (maintained fork of libfyaml-sys)"
documentation = "https://docs.rs/fyaml-sys"
edition = "2021"
keywords = ["yaml", "ffi", "libfyaml"]
license = "MIT"
links = "libfyaml"
repository = "https://github.com/0k/fyaml-sys"
rust-version = "1.70"
exclude = [".pkg/", "AGENTS.md", "CLAUDE.md", ".claude/"]

[dependencies]
libc = "0.2"

[build-dependencies]
git2 = "0.18.1"
bindgen = "0.69"
semver = "1.0.21"
cc = "1"
regex = "1.10.3"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-musl"]
rustdoc-args = ["--generate-link-to-definition"]
